<resources>
    <string name="app_name">Atividade 001</string>
    <string name="lbl_cadastrar_externo">Cadastrar Externo</string>
    <string name="lbl_cadastrar_servidor">Cadastrar Servidor</string>
    <string name="lbl_cadastrar_aluno">Cadastrar Aluno</string>
    <string name="txt_total_aluno">Total de Alunos Cadastrados:</string>
    <string name="txt_total_servidor">Total de Servidores Cadastrados:</string>
    <string name="txt_total_externo">Total de Cadastros Externos:</string>
    <string name="txt_seja_bem_vindo">Seja bem-vindo!</string>
    <string name="lblServidorNome">Nome:</string>
    <string name="lblServidorSIAPE">SIAPE:</string>
    <string name="lblAlunoMatricula">Matrícula:</string>
    <string name="lblAlunoNome">Nome:</string>
    <string name="lblNomeExterno">Nome:</string>
    <string name="lblEmailExterno">Email:</string>
</resources>
